<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainActivity_rltroot"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            android:padding="@dimen/field_left_right_margin">

            <com.customeview.NormalTextView
                style="@style/text_field_style"
                android:layout_marginLeft="@dimen/field_left_padding_small"
                android:layout_marginTop="@dimen/field_gap"
                android:text="@string/category_name" />

            <com.customeview.NormalEditText
                android:id="@+id/editCategoryName"
                style="@style/edit_field_style"
                android:layout_marginTop="@dimen/field_gap_small"
                android:inputType="textCapWords"
                android:maxLength="30" />

            <com.customeview.NormalTextView
                android:id="@+id/txtAddCategory"
                style="@style/button_field_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginTop="@dimen/field_gap"
                android:gravity="center"
                android:text="@string/submit" />
        </LinearLayout>
    </FrameLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"></com.google.android.gms.ads.AdView>

</RelativeLayout>